@@ -36,6 +36,7 @@
  * #1714 (The log-PDF of the Pareto is wrong)
  * #1721 (The `draw` method of `SobolSimulationAlgorithm` does not reuse the descriptions)
  * #1729 (LinearModelAnalysis sometimes fail)
+ * #1737 (Low rank tensor doc issues)
 
 
 == 1.16 release (2020-11-16) == #release-1.16
